Solved content jumping of the block elements.

--- a/packages/ckeditor5-image/theme/image.css
+++ b/packages/ckeditor5-image/theme/image.css
@@ -10,7 +10,7 @@
 		text-align: center;
 
 		/* Make sure there is some space between the content and the image. Center image by default. */
-		margin: 1em auto;
+		margin: var(--ck-spacing-large) auto;
 
 		/* Make sure the caption will be displayed properly (See: https://github.com/ckeditor/ckeditor5/issues/1870). */
 		min-width: 50px;
