--- a/packages/ckeditor5-media-embed/theme/mediaembed.css
+++ b/packages/ckeditor5-media-embed/theme/mediaembed.css
@@ -9,7 +9,7 @@
 	clear: both;
 
 	/* Make sure there is some space between the content and the media. */
-	margin: 1em 0;
+	margin: var(--ck-spacing-large) 0;
 
 	/* Make sure media is not overriden with Bootstrap default `flex` value.
 	See: https://github.com/ckeditor/ckeditor5/issues/1373. */
