--- a/packages/ckeditor5-table/theme/table.css
+++ b/packages/ckeditor5-table/theme/table.css
@@ -5,7 +5,7 @@
 
 .ck-content .table {
 	/* Give the table widget some air and center it horizontally */
-	margin: 1em auto;
+	margin: var(--ck-spacing-large) auto;
 	display: table;
 
 	& table {
